add Dockerfiles to test different Java versions